--- a/jager.yml
+++ b/jager.yml
@@ -1,3 +1,72 @@
+
+cat <<EOF | kubectl apply -f -
+
+apiVersion: networking.istio.io/v1alpha3
+kind: Gateway
+metadata:
+  name: jaeger-gateway
+  namespace: istio-system
+spec:
+  selector:
+    istio: ingressgateway
+  servers:
+  - port:
+      number: 8000
+      name: http-jaeger-tracing
+      protocol: HTTP
+    hosts:
+    - "webserver.ton.io"
+
+EOF
+
+cat <<EOF | kubectl apply -f -
+
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: jaeger-vs
+  namespace: istio-system
+spec:
+  hosts:
+  - "webserver.ton.io"
+  gateways:
+  - jaeger-gateway
+  http:
+  - route:
+    - destination:
+        host: tracing
+        port:
+          number: 8000
+
+EOF
+
+cat <<EOF | kubectl apply -f -
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: tracing
+  namespace: istio-system
+  labels:
+    app: jaeger
+spec:
+  type: ClusterIP
+  ports:
+    - name: http-query
+      port: 8000
+      protocol: TCP
+      targetPort: 16686
+    # Note: Change port name if you add '--query.grpc.tls.enabled=true'
+    - name: grpc-query
+      port: 16685
+      protocol: TCP
+      targetPort: 16685
+  selector:
+    app: jaeger
+
+EOF
+
+
 cat <<EOF | kubectl apply -f -
 
 apiVersion: apps/v1
@@ -15,7 +84,6 @@ spec:
     metadata:
       labels:
         app: jaeger
-        version: 1.23.0
       annotations:
         sidecar.istio.io/inject: "false"
         prometheus.io/scrape: "true"
@@ -56,122 +124,49 @@ spec:
       volumes:
         - name: data
           emptyDir: {}
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: jaeger-svc
-  namespace: istio-system
-  labels:
-    app: jaeger
-spec:
-  type: ClusterIP
-  ports:
-    - port: 8000
-      targetPort: 16686
-      name: http-jaeger
-      protocol: TCP
+EOF
 
-    - port: 16685
-      targetPort: 16685
-      name: grpc-query
-      protocol: TCP
 
-  selector:
-    app: jaeger
-  sessionAffinity: None
-status:
-  loadBalancer: {}
+cat <<EOF | kubectl apply -f -
 
----
-
+# Jaeger implements the Zipkin API. To support swapping out the tracing backend, we use a Service named Zipkin.
 apiVersion: v1
 kind: Service
 metadata:
   labels:
     name: zipkin
-  name: jaeger-zipkin-svc
+  name: zipkin
   namespace: istio-system
 spec:
   ports:
     - port: 9411
       targetPort: 9411
       name: http-query
-      protocol: TCP
   selector:
     app: jaeger
-  sessionAffinity: None
-  type: ClusterIP
-status:
-  loadBalancer: {}
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: jaeger-collector-svc
+  name: jaeger-collector
   namespace: istio-system
   labels:
     app: jaeger
 spec:
   type: ClusterIP
   ports:
-  
-  - port: 14268
+  - name: jaeger-collector-http
+    port: 14268
     targetPort: 14268
-    name: jaeger-collector-http
     protocol: TCP
-
-  - port: 14250
+  - name: jaeger-collector-grpc
+    port: 14250
     targetPort: 14250
-    name: jaeger-collector-grpc
-    protocol: TCP 
-
+    protocol: TCP
   - port: 9411
     targetPort: 9411
     name: http-zipkin
-    protocol: TCP 
-
   selector:
     app: jaeger
 
-EOF
-
-cat <<EOF | kubectl apply -f -
-
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: jaeger-vs
-  namespace: istio-system
-spec:
-  hosts:
-  - "webserver.ton.io"
-  gateways:
-  - jaeger-gateway
-  http:
-  - route:
-    - destination:
-        host: jaeger-svc
-        port:
-          number: 8000
-EOF
-
-cat <<EOF | kubectl apply -f -
-
-apiVersion: networking.istio.io/v1alpha3
-kind: Gateway
-metadata:
-  name: jaeger-gateway
-  namespace: istio-system
-spec:
-  selector:
-    istio: ingressgateway
-  servers:
-  - port:
-      number: 8000
-      name: jaeger-http
-      protocol: HTTP
-    hosts:
-    - "webserver.ton.io"
 EOF
