--- a/prometeus.yml
+++ b/prometeus.yml
@@ -13,7 +13,7 @@ spec:
       name: http-prom
       protocol: HTTP
     hosts:
-    - "*"
+    - "webserver.ton.io"
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -22,7 +22,7 @@ metadata:
   namespace: istio-system
 spec:
   hosts:
-  - "*"
+  - "webserver.ton.io"
   gateways:
   - prometheus-gateway
   http:
