--- a/productpage-vs-gw.yaml
+++ b/productpage-vs-gw.yaml
@@ -15,10 +15,6 @@ spec:
       protocol: HTTP
     hosts:
     - "webserver.ton.io"
-EOF
-
-cat <<EOF | kubectl apply -f -
-
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
@@ -37,9 +33,6 @@ spec:
           number: 9080
 EOF
 
-
-for i in `seq 1 100`; do curl -s -o /dev/null http://webserver.ton.io:9080/productpage; done
-
-
-
-  579  while true; do     echo "------";     curl -s -i websever.ton.io:9080 | head -2;     sleep 2; done
+#Test
+# for i in `seq 1 100`; do curl -s -o /dev/null http://webserver.ton.io:9080/productpage; done
+# while true; do     echo "------";     curl -s -i websever.ton.io:9080 | head -2;     sleep 2; done
